[package]
name = "cab_jup_enhanced_bot"
version = "0.1.0"
edition = "2024"

[features]
default = ["spam"]
grpc = []
spam = []

[dependencies]
anyhow = "1.0.98"
borsh = { version = "1.5.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.0.0-rc.3", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
helius-laserstream = "0.0.6"
jupiter-swap-api-client = { git = "https://github.com/vvizardev/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
solana-client = "2.3.3"
solana-relayer-adapter-rust = "3.3.2"
solana-sdk = "2.3.1"
solana-rpc-client-nonce-utils = "2.3.11"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
toml = "0.9.5"
once_cell = "1.21.3"
bincode = "1.3.3"
log = "0.4.28"
reqwest = "0.12.24"
serde_json = "1.0.145"
bs58 = "0.5.1"

[[bin]]
name = "main"
path = "src/entry_point/main.rs"

[[bin]]
name = "nonce"
path = "src/entry_point/create_nonce.rs"
